[package]
authors = ['Patrick ODacre <https://github.com/patrickodacre>']
description = 'A pallet about Knights. They are like kitties, only better.'
edition = '2018'
homepage = 'http://patrickwho.me'
license = 'Unlicense'
name = 'pallet-knights'
readme = 'README.md'
repository = 'https://github.com/patrickodacre/substrate-knights/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-benchmarking = { default-features = false, optional = true, version = '3.1.0' }
sp-std = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
pallet-balances = { default-features = false, version = '3.0.0' }
serde = { version = "1.0.119" }
sp-runtime = { default-features = false, version = '3.0.0' }

[dev-dependencies]
sp-core = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
	'codec/std',
	'serde/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'pallet-balances/std',
	'sp-std/std',
]
runtime-benchmarks = [
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system/runtime-benchmarks',
]
# Note: frame-support `try-runtime` feature is released after v3.
#   Uncomment the following line when `frame-support` version > `3.0.0`.
# try-runtime = ['frame-support/try-runtime']
